--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         output.innerHTML = `
                             <strong>Side of the Bridge:</strong> ${bridgeSide}<br>
                             <strong>Bridge Weight:</strong> ${bridgeWeight} lbs<br>
-                            <strong>Average U3 Value:</strong> ${averageU3.toFixed(2)} feet<br>
+                            <strong>Average U3 Value:</strong> ${averageU3.toFixed(2)} inches<br>
                             <strong>Estimated Bridge Cost:</strong> $${cost.toFixed(2)}
                         `;
                         costed.innerHTML = `${cost.toFixed(2)}`;
